--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
-    "@ionic/react": "^8.0.0",
-    "@ionic/react-router": "^8.0.0",
+    "@ionic/react": "^8.2.6",
+    "@ionic/react-router": "^8.2.6",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "artplayer": "^5.1.6",
     "cheerio": "1.0.0-rc.12",
     "client-ext-animevsub-helper": "^1.0.31",
     "eruda2": "0.0.2-b8",
-    "hls.js": "^1.5.13",
+    "framer-motion": "^11.3.21",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
