--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,28 +1,26 @@
-name: BuildApk
+name: Build & Publish Release APK
 
 on:
- push:
-  branches:
-   - master
-   
+  push:
+    tags:
+      - '*'
+
 jobs:
-  build:
+  Gradle:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: set up JDK 1.8
+    - name: checkout code
+      uses: actions/checkout@v2
+    - name: setup jdk
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 11
     - name: Make Gradle executable
       run: chmod +x ./gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug
+    - name: Build Release APK
+      run: ./gradlew assembleRelease
     - name: Releasing using Hub
-      uses: ShaunLWM/action-release-debugapk@master
+      uses: sangatdesai/release-apk@main
       env:
-       GITHUB_TOKEN: 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
+       GITHUB_TOKEN: ${{ secrets.TOKEN }}
        APP_FOLDER: android/app
-       RELEASE_TITLE: New Build
